kubernetes/apps/default/radarr/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/route.openshift.io/route_v1.json
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: radarr
  labels:
    ingress: grappleberry
spec:
  host: radarr.grappleberry.xyz
  port:
    targetPort: 7878
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: radarr
    weight: 100
  wildcardPolicy: None
